# tme-quant

./: .gitignore  CURVELOPS_INTEGRATION.md  FINAL_STATUS.md  Makefile  README.md  SEGMENTATION_STATUS.md  in_curves.csv  pyproject.toml  setup_curvelops_env.sh  simple_usage.py  test_ctfire_integration.py  test_curvelops_integration.py  test_granular_api.py  test_new_architecture.py  test_with_expected_curvelets.py
.github/: ci_setup_curvelab.sh
.github/workflows/: ci.yml  manual-test.yml  test-action.yml
ctfire_py/: pyproject.toml
ctfire_py/ctfire/: __init__.py  api.py
ctfire_py/ctfire/core/algorithms/: __init__.py  fire_algorithm.py
ctfire_py/ctfire/core/processors/: ctfire_processor.py
ctfire_py/ctfire/types/core/: fiber_network.py
ctfire_py/tests/: __init__.py  test_ctfire_api.py  test_integration.py
curvealign_py/: SETUP_NOTES.md
curvealign_py/curvealign/: __init__.py  api.py
curvealign_py/curvealign/core/: __init__.py
curvealign_py/curvealign/types/: __init__.py
curvealign_py/curvealign/visualization/: __init__.py
curvealign_py/tests/: test_granular_api.py
doc/: DEVELOPMENT.md  INSTALL.md  requirements.txt
doc/curvealign/: CURVEALIGN_PYTHON_API_SUMMARY.md  ENHANCEMENTS_SUMMARY.md  FEATURE_COMPARISON.md  PY_API_PROPOSAL.md
doc/installation/: CURVELOPS_INTEGRATION.md  NAPARI_PLUGIN_INSTALLATION.md  QUICK_START.md  SETUP_GUIDE.md
doc/napari/: FINAL_STATUS.md  MULTI_ENVIRONMENT_GUIDE.md  SEGMENTATION_FEATURE.md  TESTING_GUIDE.md
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
examples/: test_plugin.py  test_roi_manager.py  test_widget_creation.py
src/: project structure with cell-fiber interaction analysis.txt  tme_object_hierarchy.txt  tme_quant_cell_analysis_structure.txt  tme_quant_fiber_analysis_structure.txt
src/ctfire_py/core/: __init__.py
src/ctfire_py/types/: __init__.py
src/curvealign_matlab/: getTifBoundary.m
src/curvealign_py/: __init__.py  api.py
src/integration/: __init__.py  adapters.py  bridges.py  facades.py
src/napari_curvealign/: INSTALLATION_AND_TEST_SUCCESS.md  ROIFILE_API_NOTES.md  TACS_WORKFLOW_GUIDE.md  __init__.py  analysis.py  env_bridge.py  fiji_bridge.py  napari.yaml  new_curv.py  preprocessing.py  roi_manager.py  segmentation.py  widget.py
src/napari_curvealign/widgets/: interaction_analysis_widget.py
src/napari_curvealign/workflows/: combined_cell_fiber_analysis.py  interaction_analysis_workflow.py
src/pipelines/: cell_analysis.py
src/pycurvelets/: __init__.py  get_alignment_to_roi.py  get_boundary.py  get_ct.py  get_fire.py  get_relative_angles.py  get_tif_boundary.py  new_curv.py  process_fibers.py  process_image.py
src/pycurvelets/helper_methods/: get_segment_pixels.py
src/pycurvelets/models/: __init__.py  models.py
src/pycurvelets/relativeAngle/: __init__.py  get_relative_angles.py
src/pycurvelets/utils/: __init__.py
src/tme_quant/: __init__.py  pyproject.toml
src/tme_quant/src/examples/: baisc_tme_analysis.py  cell_analysis_in_tme_object.py  cell_seg_classification_quantification.py  cell_segmentation_stardist.py  fiber_orientation_2_boundary.py  visualization_in_napari.py
src/tme_quant/src/tme_quant/cell_analysis/: __init__.py
src/tme_quant/src/tme_quant/cell_analysis/config/: __init__.py
src/tme_quant/src/tme_quant/cell_analysis/core/: __init__.py  cell_analyzer.py  classification_analyzer.py  quantification_analyzer.py  segmentation_analyzer.py
src/tme_quant/src/tme_quant/cell_analysis/io/: __init__.py  exporters.py  model_loaders.py
src/tme_quant/src/tme_quant/cell_analysis/methods/: __init__.py  registry.py
src/tme_quant/src/tme_quant/cell_analysis/methods/classification/: __init__.py  base_classification.py
src/tme_quant/src/tme_quant/cell_analysis/methods/quantification/: __init__.py
src/tme_quant/src/tme_quant/cell_analysis/methods/segmentation/: __init__.py  base_segmentation.py  cellpose.py  stardist.py
src/tme_quant/src/tme_quant/cell_analysis/utils/: __init__.py  cell_utils.py  postprocessing.py  preprocessing.py  validation.py
src/tme_quant/src/tme_quant/core/: base_models.py  hyerarchy.py  project.py
src/tme_quant/src/tme_quant/core/tme_models/: __init__.py  cell_model.py  fiber_model.py  interaction_models.py  stroma_model.py  tissue_model.py  tumor_model.py
src/tme_quant/src/tme_quant/fiber_analysis/core/: extraction_analyzer.py  fiber_analyzer.py  orientation_analyzer.py
src/tme_quant/src/tme_quant/fiber_analysis/io/: exporters.py
src/tme_quant/src/tme_quant/fiber_analysis/methods/extraction/: base_extraction.py  ctfire.py  ridge_detection.py
src/tme_quant/src/tme_quant/fiber_analysis/methods/orientation/: base_orientation.py  curvealign.py  orientationj.py
src/tme_quant/src/tme_quant/fiber_analysis/utils/: geometry_utils.py
src/tme_quant/src/tme_quant/measurement/: interaction_features.py
src/tme_quant/src/tme_quant/pipelines/: interaction_analysis_pipeline.py  standard_tme_pipeline.py
src/tme_quant/src/tme_quant/tme_analysis/: cell_fiber_interaction.py  interaction_network_analysis.py
src/tme_quant/src/tme_quant/visualization/: interaction_visualization.py
test/ctfire_py/: test_ctfire_api.py
test/curvealign_py/: test_granular_api.py
tests/: example_process_image.py  napari_curvealign_test.py  real1_ct_scale4.csv  test_curvelops_basic.py  test_get_alignment_to_roi.py  test_get_ct.py  test_get_tif_boundary.py  test_new_curv.py  test_process_image.py  test_relative_angles.py  test_roi_formats.py  test_summary_statistics.py  test_unified_api.py
tests/ctfire_py/: test_ctfire_api.py  test_integration.py
tests/curvealign_py/: test_api.py  test_granular_api.py
tests/test_images/: real2.tif
tests/test_results/: mat_to_csv.py
tests/validation/: README.md  test_curvelops_final.py
(+98 files in other folders)
