[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tme-quant"
version = "0.1.0.dev0"
description = "Python translation of CurveAlign; curvelet-based quantification and napari plugin"
authors = [{ name = "Eliceiri Lab" }]
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "scipy",
  "opencv-python",
  "scikit-image",
  "openpyxl",

  "pybind11",
  "scikit-build-core",
  "cmake",
  "ninja",

  "napari",
  "pyqt6",
  "qtpy",
]

[dependency-groups]
dev = [
  "build",
  "pytest",
  "ruff",
]

[project.optional-dependencies]
curvelops = [
  "curvelops @ git+https://github.com/PyLops/curvelops@0.23.4",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
