[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tme-quant"
version = "0.1.0.dev0"
description = "Python translation of CurveAlign; curvelet-based quantification and napari plugin"
authors = [{ name = "Eliceiri Lab" }]
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "scipy",
  "opencv-python",
  "scikit-image",
  "openpyxl",
  "napari",
  "pyqt6",
  "qtpy",
]

[dependency-groups]
dev = [
  "build",
  "pytest",
  "ruff",
]

[project.optional-dependencies]
curvelops = [
  "curvelops @ git+https://github.com/PyLops/curvelops@0.23.4",
]

[project.entry-points."napari.manifest"]
napari-curvealign = "napari_curvealign:napari.yaml"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
napari_curvealign = ["napari.yaml"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
