[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tme-quant"
version = "0.1.0.dev0"
description = "Python translation of CurveAlign; curvelet-based quantification and napari plugin"
authors = [{ name = "Eliceiri Lab" }]
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10.1",
  "napari",
  "numpy>=2.2.6",
  "opencv-python-headless>=4.10.0.84",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "pyqt6",
  "qtpy",
  "scikit-image>=0.25.0",
  "scikit-learn>=1.7.1",
  "scipy>=1.15.2",
]

[dependency-groups]
dev = [
  "build",
  "pytest",
  "ruff",
]

[project.optional-dependencies]
curvelops = [
  "curvelops @ git+https://github.com/PyLops/curvelops@0.23.4",
]

[project.entry-points."napari.manifest"]
napari-curvealign = "napari_curvealign:napari.yaml"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
napari_curvealign = ["napari.yaml"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
