[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctfire"
version = "0.1.0"
description = "CT-FIRE Python API - Individual fiber extraction and quantification"
readme = "README.md"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "CT-FIRE Development Team", email = "ctfire@loci.wisc.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-image>=0.18.0",
    "tifffile>=2021.0.0",
]

[project.optional-dependencies]
visualization = ["matplotlib>=3.5.0"]
napari = ["napari[all]>=0.4.0"]
imagej = ["pyimagej>=1.0.0"]
all = ["matplotlib>=3.5.0", "napari[all]>=0.4.0", "pyimagej>=1.0.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://loci.wisc.edu/software/ctfire"
Repository = "https://github.com/uw-loci/curvelets"
Documentation = "https://github.com/uw-loci/curvelets/tree/main/Curvelets_API"

[tool.setuptools.packages.find]
where = ["."]
include = ["ctfire*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ctfire --cov-report=term-missing"
