[project]
name = "tmequant-hierarchy"
version = "0.1.0"
description = "QuPath-like hierarchical object model for image analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
    {name = "UW-LOCI"}
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "scikit-image>=0.19.0",
    "scipy>=1.7.0",
    "tifffile>=2021.11.0",
    "ome-types>=0.3.0",
    "zarr>=2.13.0",
]

[project.optional-dependencies]
napari = ["napari>=0.4.0", "magicgui>=0.3.0", "qtpy>=2.0.0"]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=5.0.0"]
full = ["networkx>=3.0.0", "plotly>=5.13.0", "pyarrow>=10.0.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"tmequant_hierarchy" = "src/tmequant_hierarchy"